Refactor form plan
